Junit5 upgrade (#431)
* Junit 5 upgrade